external-crates/move/crates/move-compiler/tests/move_check/typing/while_body_invalid.snap
---
source: crates/move-compiler/tests/move_check_testsuite.rs
info:
  flavor: core
  edition: legacy
  lint: false
---
error[E04007]: incompatible types
  ┌─ tests/move_check/typing/while_body_invalid.move:3:22
  │
3 │         while (cond) 0u64;
  │                      ^^^^
  │                      │
  │                      Invalid loop body
  │                      Expected: '()'
  │                      Given: 'u64'

error[E04007]: incompatible types
  ┌─ tests/move_check/typing/while_body_invalid.move:4:22
  │
4 │         while (cond) false;
  │                      ^^^^^
  │                      │
  │                      Invalid loop body
  │                      Expected: '()'
  │                      Given: 'bool'

error[E04007]: incompatible types
  ┌─ tests/move_check/typing/while_body_invalid.move:5:22
  │
5 │         while (cond) { @0x0 };
  │                      ^^^^^^^^
  │                      │ │
  │                      │ Given: 'address'
  │                      Invalid loop body
  │                      Expected: '()'

error[E04007]: incompatible types
  ┌─ tests/move_check/typing/while_body_invalid.move:6:22
  │
6 │         while (cond) { let x = 0u64; x };
  │                      ^^^^^^^^^^^^^^^^^^^
  │                      │         │
  │                      │         Given: 'u64'
  │                      Invalid loop body
  │                      Expected: '()'

error[E04007]: incompatible types
  ┌─ tests/move_check/typing/while_body_invalid.move:7:22
  │
7 │         while (cond) { if (cond) 1u64 else 0 };
  │                      ^^^^^^^^^^^^^^^^^^^^^^^^^
  │                      │           │
  │                      │           Given: 'u64'
  │                      Invalid loop body
  │                      Expected: '()'
